The new test cases for the vhdl. Sorry the project is so full of garbage, I'm not sure what files I can ignore.

--- a/vhdl/montgomery_multiplication/montgomery_multiplier_summary.html
+++ b/vhdl/montgomery_multiplication/montgomery_multiplier_summary.html
@@ -105,9 +105,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ggollmer/SENG440/seng440-rsa/vhdl/montgomery_multiplication/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Jul 21 20:28:29 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ggollmer/SENG440/seng440-rsa/vhdl/montgomery_multiplication/isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Jul 23 16:12:10 2014</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 07/21/2014 - 20:28:31</center>
+<br><center><b>Date Generated:</b> 07/23/2014 - 16:14:53</center>
 </BODY></HTML>
